@@ -1,3 +1,9 @@
+2013-07-03  Ramon Casero  <rcasero@gmail.com>
+
+	* Add matlab/ManifoldToolbox/tri_squeeze.m: (0.1.0)
+
+	- TRI_SQUEEZE Remove disconnected vertices from triangular mesh.
+
 2013-07-02  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/update_README.sh: (0.2.1)
